Fix: Use user directory for data storage instead of src/main/resources